--- a/presentation/package.json
+++ b/presentation/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fragile-marp",
+    "name": "feedback-loops-marp",
     "version": "1.0.0",
     "author": "Sean Killeen <SeanKilleen@gmail.com>",
     "license": "MIT",
